WRP-2648 fix wrap on header context menu

--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -76,7 +76,7 @@
      background: #4fc3f7;
      display: block;
      color: #fff;
-     padding: 8px 15px;
+     padding: 8px 13px;
  }
  ul.dashboard-link-list li ul li:hover {
      background: #409dc7;
